Fix unreadable link hover

--- a/leapfrog/pandora/css/style.css
+++ b/leapfrog/pandora/css/style.css
@@ -105,6 +105,7 @@ label{
 
 .form-input-btn:hover{
   background-color: #d54f78;
+  color: white;
 }
 
 
